# novel2world

./: .gitignore  PRD.md  README.md  main.py  pyproject.toml  t.py
app/: __init__.py  directus_cms.py  load_doc.py  models.py  storage.py  translator.py  validation.py
app/agents/: chapter_analysis.py  chapter_translate.py
app/scripts/: loader.py
app/utils/: annotate.py  context.py
novels/: 《末世异神》.txt
openspec/: project.md
openspec/changes/add-chapter-translation-cli/: proposal.md  tasks.md
openspec/changes/add-chapter-translation-cli/specs/chapter-translation/: spec.md
prompts/: Chinese-to-English.json  chapter_analysis.json  judeg.json  zh2en_refiner.json
