[project]
name = "novel-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.13",
    "openai>=2.8.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

